fixed alignment issue

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
 
 }
 
+#home {
+    text-align: center;
+}
+
 #title {
     text-align: center;
 }
